[gd_scene load_steps=18 format=4 uid="uid://b4rue5qxq8rq5"]

[ext_resource type="Texture2D" uid="uid://5wppe5dwmvix" path="res://Sprite-0005.png" id="1_ktq1m"]
[ext_resource type="PackedScene" uid="uid://dmug1epffv0c2" path="res://player.tscn" id="2_d12e6"]
[ext_resource type="Script" path="res://player2.gd" id="3_wi2tk"]
[ext_resource type="Script" path="res://rope_connection.gd" id="4_2bhar"]
[ext_resource type="Texture2D" uid="uid://bmoojqtdqu7k7" path="res://door.png" id="5_788k7"]
[ext_resource type="Texture2D" uid="uid://bds8rt5bedmtj" path="res://basic_curry.png" id="6_m805b"]
[ext_resource type="Script" path="res://camera_controller.gd" id="6_vxvaa"]
[ext_resource type="Texture2D" uid="uid://5y2oxhwtqi3n" path="res://Naan.png" id="7_kq548"]
[ext_resource type="Script" path="res://door.gd" id="7_s0ern"]
[ext_resource type="Script" path="res://alien.gd" id="9_41yps"]
[ext_resource type="Texture2D" uid="uid://cjhtcvsidlpa2" path="res://Alien.png" id="10_v3hmt"]
[ext_resource type="Texture2D" uid="uid://cyctk5lrx0p3q" path="res://curryOnTop.png" id="11_qvp2h"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1ao5t"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8p1fm"]
texture = ExtResource("1_ktq1m")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 4.8125, -0.75, 5.3125, -1.125, 1, -0.125, 0.1875, 8, -0.0625)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.75, 4.125, 5.0625, 4.125, 0, -8, 0.125)
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:1/0 = 0
3:1/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.8125, -1.6875, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 1.625, 0.0625, 8, 8, -8, 8)
1:1/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.9375, 8.5625, -5, 1.1875, 2.9375, 1.1875, 2.5625, 8)
0:4/0 = 0

[sub_resource type="TileSet" id="TileSet_dj7mr"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_1ao5t")
sources/0 = SubResource("TileSetAtlasSource_8p1fm")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8w8q"]
size = Vector2(11, 12.75)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ouwnu"]
radius = 28.0
height = 58.0

[node name="curry_house_inside" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(467, 241)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD//wQAAAAAAAAAAAD+/wQAAAAAAAAAAAD9/wQAAAAAAAAAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAD9/wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD//wUAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAADAAQAAAAAAAAAAAACAAQAAAAAAAAAAAD8/wUAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wQAAAAAAAAAAAD8/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD5/wUAAAAAAAAAAAD4/wYAAAAAAAAAAAD5/wYAAAAAAAAAAAD6/wYAAAAAAAAAAAD7/wYAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAD6/wQAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wMAAAABAAAAAAD6/wMAAAABAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAAKAAQAAAAAAAAAAAD4/wMAAAABAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD3/wUAAAAAAAAAAAD6/wIAAAAAAAIAAAD6/wEAAAAAAAEAAAD5/wIAAAABAAEAAAAKAAIAAAAAAAMAAAAKAAEAAAAAAAMAAAAKAAAAAAAAAAMAAAD3/wMAAAABAAAAAAD2/wMAAAABAAAAAAD1/wMAAAABAAAAAAD0/wMAAAABAAAAAADz/wMAAAABAAAAAADy/wMAAAABAAAAAADx/wMAAAABAAAAAADv/wMAAAABAAAAAADu/wMAAAABAAAAAADw/wMAAAABAAAAAADt/wMAAAABAAAAAAALAAEAAAABAAAAAAAMAAEAAAABAAAAAAANAAEAAAABAAAAAAAOAAEAAAABAAAAAAAPAAEAAAABAAAAAAAQAAEAAAABAAAAAAARAAEAAAAAAAAAAAASAAEAAAAAAAAAAAATAAEAAAABAAAAAAAUAAEAAAABAAAAAAAVAAEAAAABAAAAAAAWAAEAAAABAAAAAAAXAAEAAAABAAAAAAAYAAEAAAABAAAAAAANAAAAAAABAAEAAAAOAAAAAAABAAEAAAAPAAAAAAABAAEAAAAQAAAAAAABAAEAAAARAAAAAAABAAEAAAASAAAAAAABAAEAAAATAAAAAAABAAEAAAAUAAAAAAABAAEAAAAVAAAAAAABAAEAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAIAAAAAAAAAAAAMAAIAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAMAAAAAAAAAAAAOAAMAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAIAAAAAAAAAAAAOAAIAAAAAAAAAAAAMAAUAAAAAAAAAAAANAAUAAAAAAAAAAAAOAAQAAAAAAAAAAAAPAAQAAAAAAAAAAAAQAAMAAAAAAAAAAAARAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAANAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAALAAYAAAAAAAAAAAAOAAYAAAAAAAAAAAAPAAYAAAAAAAAAAAAQAAYAAAAAAAAAAAARAAYAAAAAAAAAAAASAAYAAAAAAAAAAAASAAUAAAAAAAAAAAARAAUAAAAAAAAAAAAQAAUAAAAAAAAAAAARAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAASAAMAAAAAAAAAAAATAAMAAAAAAAAAAAAUAAIAAAAAAAAAAAATAAIAAAAAAAAAAAASAAIAAAAAAAAAAAARAAIAAAAAAAAAAAAQAAIAAAAAAAAAAAASAAQAAAAAAAAAAAATAAQAAAAAAAAAAAD2/wQAAAAAAAAAAAD1/wQAAAAAAAAAAAD0/wQAAAAAAAAAAADz/wQAAAAAAAAAAADy/wQAAAAAAAAAAADx/wQAAAAAAAAAAADw/wQAAAAAAAAAAADz/wUAAAAAAAAAAAD0/wUAAAAAAAAAAAD1/wUAAAAAAAAAAAD2/wUAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wYAAAAAAAAAAAD2/wYAAAAAAAAAAAD1/wYAAAAAAAAAAAD0/wYAAAAAAAAAAADz/wYAAAAAAAAAAADy/wYAAAAAAAAAAADy/wUAAAAAAAAAAADx/wUAAAAAAAAAAADw/wUAAAAAAAAAAADv/wUAAAAAAAAAAADx/wYAAAAAAAAAAADw/wYAAAAAAAAAAADv/wYAAAAAAAAAAADu/wUAAAAAAAAAAADu/wQAAAAAAAAAAADv/wQAAAAAAAAAAAD2/wIAAAAAAAIAAADz/wIAAAAAAAIAAAD2/wEAAAAAAAEAAADz/wEAAAAAAAEAAAD1/wIAAAABAAEAAAD3/wIAAAABAAEAAAD7/wIAAAAAAAMAAAD7/wEAAAAAAAMAAAD7/wAAAAAAAAMAAAD7////AAAAAAMAAAD7//7/AAAAAAMAAAD7//3/AAAAAAMAAAAKAP//AAAAAAMAAAAKAP7/AAAAAAMAAAAKAP3/AAAAAAMAAAAJAPz/AAAAAAMAAAD8//z/AAAAAAMAAAD9//v/AAAAAAMAAAAIAPv/AAAAAAMAAAAHAPr/AAAAAAMAAAD+//r/AAAAAAMAAAD///n/AAAAAAMAAAAFAPn/AAAAAAMAAAAGAPn/AAAAAAMAAAAEAPn/AAAAAAMAAAADAPn/AAAAAAMAAAACAPn/AAAAAAMAAAABAPn/AAAAAAMAAAAAAPn/AAAAAAMAAAD7//z/AAABAAMAAAD8//v/AAABAAMAAAD9//r/AAABAAMAAAD+//n/AAABAAMAAAAKAPz/AAACAAMAAAAJAPv/AAACAAMAAAAIAPr/AAACAAMAAAAHAPn/AAACAAMAAAD7/wMAAAAAAAMAAAD8/wMAAAAAAAMAAAD9/wMAAAAAAAMAAAD+/wMAAAAAAAMAAAD//wMAAAAAAAMAAAAAAAMAAAAAAAMAAAABAAMAAAAAAAMAAAACAAMAAAAAAAMAAAADAAMAAAAAAAMAAAAEAAMAAAAAAAMAAAAFAAMAAAAAAAMAAAAGAAMAAAAAAAMAAAAHAAMAAAAAAAMAAAAIAAMAAAAAAAMAAAAJAAMAAAAAAAMAAAAKAAMAAAAAAAMAAAD8/wIAAAAAAAQAAAD8/wEAAAAAAAQAAAADAP7/AAAAAAQAAAADAP3/AAAAAAQAAAADAPz/AAAAAAQAAAADAPv/AAAAAAQAAAADAPr/AAAAAAQAAAACAPr/AAAAAAQAAAABAPr/AAAAAAQAAAAAAPr/AAAAAAQAAAD///r/AAAAAAQAAAD///v/AAAAAAQAAAD+//v/AAAAAAQAAAD+//z/AAAAAAQAAAD9//z/AAAAAAQAAAD9//3/AAAAAAQAAAD8//3/AAAAAAQAAAD8//7/AAAAAAQAAAD8////AAAAAAQAAAD8/wAAAAAAAAQAAAD9/wAAAAAAAAQAAAD9////AAAAAAQAAAD9//7/AAAAAAQAAAD+//7/AAAAAAQAAAD+//3/AAAAAAQAAAD///3/AAAAAAQAAAD///z/AAAAAAQAAAAAAPz/AAAAAAQAAAAAAPv/AAAAAAQAAAABAPv/AAAAAAQAAAABAPz/AAAAAAQAAAABAP3/AAAAAAQAAAAAAP3/AAAAAAQAAAAAAP7/AAAAAAQAAAD///7/AAAAAAQAAAD/////AAAAAAQAAAD+////AAAAAAQAAAD+/wAAAAAAAAQAAAD+/wEAAAAAAAQAAAD9/wEAAAAAAAQAAAD9/wIAAAAAAAQAAAD+/wIAAAAAAAQAAAD//wIAAAAAAAQAAAD//wEAAAAAAAQAAAD//wAAAAAAAAQAAAAAAAAAAAAAAAQAAAAAAP//AAAAAAQAAAABAP//AAAAAAQAAAABAP7/AAAAAAQAAAACAP7/AAAAAAQAAAACAP3/AAAAAAQAAAACAPz/AAAAAAQAAAACAPv/AAAAAAQAAAACAP//AAAAAAQAAAACAAAAAAAAAAQAAAABAAAAAAAAAAQAAAABAAEAAAAAAAQAAAAAAAEAAAAAAAQAAAAAAAIAAAAAAAQAAAABAAIAAAAAAAQAAAACAAIAAAAAAAQAAAACAAEAAAAAAAQAAAADAAEAAAAAAAQAAAADAAAAAAAAAAQAAAADAP//AAAAAAQAAAAEAP//AAAAAAQAAAAEAP7/AAAAAAQAAAAEAP3/AAAAAAQAAAAEAPz/AAAAAAQAAAAEAPv/AAAAAAQAAAAEAPr/AAAAAAQAAAAFAPr/AAAAAAQAAAAFAPv/AAAAAAQAAAAFAPz/AAAAAAQAAAAFAP3/AAAAAAQAAAAFAP7/AAAAAAQAAAAFAP//AAAAAAQAAAAFAAAAAAAAAAQAAAAEAAAAAAAAAAQAAAAEAAEAAAAAAAQAAAAEAAIAAAAAAAQAAAADAAIAAAAAAAQAAAAFAAEAAAAAAAQAAAAGAAEAAAAAAAQAAAAGAAAAAAAAAAQAAAAGAP//AAAAAAQAAAAGAP7/AAAAAAQAAAAGAP3/AAAAAAQAAAAGAPz/AAAAAAQAAAAGAPv/AAAAAAQAAAAGAPr/AAAAAAQAAAAHAPv/AAAAAAQAAAAHAPz/AAAAAAQAAAAHAP3/AAAAAAQAAAAHAP7/AAAAAAQAAAAHAP//AAAAAAQAAAAHAAAAAAAAAAQAAAAHAAEAAAAAAAQAAAAHAAIAAAAAAAQAAAAGAAIAAAAAAAQAAAAIAAIAAAAAAAQAAAAIAAEAAAAAAAQAAAAIAAAAAAAAAAQAAAAIAP//AAAAAAQAAAAIAP7/AAAAAAQAAAAIAP3/AAAAAAQAAAAIAPz/AAAAAAQAAAAJAP3/AAAAAAQAAAAJAP7/AAAAAAQAAAAJAP//AAAAAAQAAAAJAAAAAAAAAAQAAAAJAAEAAAAAAAQAAAAJAAIAAAAAAAQAAAAFAAIAAAADAAMAAAA=")
tile_set = SubResource("TileSet_dj7mr")

[node name="Player1Spawn" type="Node2D" parent="."]
position = Vector2(341, 321)

[node name="Player2Spawn" type="Node2D" parent="."]
position = Vector2(486, 321)

[node name="Players" type="Node2D" parent="."]
script = ExtResource("4_2bhar")
player1_path = NodePath("Player1")
player2_path = NodePath("Player2")

[node name="Player2" parent="Players" instance=ExtResource("2_d12e6")]
z_index = 1
position = Vector2(980, 398)
scale = Vector2(4, 4)
script = ExtResource("3_wi2tk")

[node name="Player1" parent="Players" instance=ExtResource("2_d12e6")]
z_index = 1
position = Vector2(931, 400)
scale = Vector2(4, 4)

[node name="Line2D" type="Line2D" parent="Players"]
z_index = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(595, 255)
script = ExtResource("6_vxvaa")

[node name="basic_curry" type="Sprite2D" parent="Camera2D"]
texture_filter = 1
position = Vector2(363, -180)
scale = Vector2(3, 3)
texture = ExtResource("6_m805b")

[node name="naan" type="Sprite2D" parent="Camera2D"]
texture_filter = 1
position = Vector2(363, -180)
scale = Vector2(3, 3)
texture = ExtResource("7_kq548")

[node name="InvisiblePlayerBoundary" type="Node" parent="."]

[node name="Door (Area2D)" type="Area2D" parent="."]
position = Vector2(1023, 400)
scale = Vector2(4, 4)
script = ExtResource("7_s0ern")

[node name="Sprite2D" type="Sprite2D" parent="Door (Area2D)"]
texture_filter = 1
texture = ExtResource("5_788k7")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door (Area2D)"]
position = Vector2(0.25, 1.625)
shape = SubResource("RectangleShape2D_y8w8q")

[node name="Cat" type="Node2D" parent="."]
position = Vector2(263, 429)

[node name="Area2D" type="Area2D" parent="Cat"]
scale = Vector2(4, 4)
script = ExtResource("9_41yps")

[node name="Sprite2D" type="Sprite2D" parent="Cat/Area2D"]
texture_filter = 1
position = Vector2(1.75, -7)
texture = ExtResource("10_v3hmt")

[node name="Sprite2D" type="Sprite2D" parent="Cat/Area2D/Sprite2D"]
texture_filter = 1
position = Vector2(0.5, -12.75)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_qvp2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cat/Area2D"]
position = Vector2(1.5, -10.75)
shape = SubResource("CapsuleShape2D_ouwnu")
